style: :lipstick: Task List activity and composables (no reactivity yet)

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ToDoSync</string>
+    <string name="title_activity_task_views">TaskViewsActivity</string>
 </resources>
