style: :lipstick: Tasks Activity

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ToDoSync</string>
     <string name="title_activity_task_views">TaskViewsActivity</string>
+    <string name="title_activity_tasks">TasksActivity</string>
 </resources>
